--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.8.2",
+    "recharts": "^3.1.2",
     "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
